--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -4,6 +4,7 @@
 // "We style it because the built-in is suck"
 
 $post-prefix: "post" !default;
+$theme-post-enable: false !default;
 
 @if ($theme-post-enable == true) {
 
@@ -44,7 +45,7 @@ $post-prefix: "post" !default;
         }
 
         p {
-            text-align: justify;
+            text-align: $theme-post-paragraph-text-align;
             margin-bottom: map-get($theme-post-font-size, medium);
         }
 
@@ -58,8 +59,8 @@ $post-prefix: "post" !default;
 
         blockquote {
             margin-left: 0;
-            border-left: 3px solid map-get($theme-color-post, title);
-            padding-left: 1em;
+            border-left: $theme-post-blockquote-border-width solid map-get($theme-color-post, blockquote);
+            padding-left: $theme-post-blockquote-padding-left;
         }
     }
 }
