--- a/_sass/themes/hyde/components/_button.scss
+++ b/_sass/themes/hyde/components/_button.scss
@@ -2,4 +2,44 @@
 // Button - Default Theme
 // ==========================================
 
-$theme-button-font-weight: bold;
+$theme-button-text-transform: capitalize;
+$theme-button-margin: 0;
+
+// -------------------------------------------
+// Button Color
+// -------------------------------------------
+
+$theme-color-button-disabled: (
+    background: $gray,
+    foreground: $deep-gray
+);
+
+$theme-color-button-common-normal: (
+    background: $white,
+    foreground: $black
+);
+
+$theme-color-button-common-hover: (
+    background: $bright-gray,
+    foreground: $black
+);
+
+$theme-color-button-cta-normal: (
+    background: $zomp,
+    foreground: $white
+);
+
+$theme-color-button-cta-hover: (
+    background: $dark-zomp,
+    foreground: $white
+);
+
+$theme-color-button-inverse-cta-normal: (
+    background: transparent,
+    foreground: $bright-green
+);
+
+$theme-color-button-inverse-cta-hover: (
+    background: transparent,
+    foreground: $green
+);
