--- a/_sass/themes/hyde/components/_paginator.scss
+++ b/_sass/themes/hyde/components/_paginator.scss
@@ -2,4 +2,4 @@
 // Paginator - Default Theme
 // ==========================================
 
-$theme-paginator-margin: 20px 0;
+$theme-paginator-margin: map-get($theme-margin, medium) 0;
