--- a/_sass/components/_field.scss
+++ b/_sass/components/_field.scss
@@ -4,6 +4,7 @@
 // "We style it because the built-in is suck"
 
 $field-prefix: "field";
+$theme-field-enable: false !default;
 
 @if ($theme-field-enable == true) {
 
