--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -4,6 +4,7 @@
 // "We style it because the built-in is suck"
 
 $modal-prefix: "modal" !default;
+$theme-modal-enable: false !default;
 
 @if ($theme-modal-enable == true) {
 
