--- a/_sass/components/_notification.scss
+++ b/_sass/components/_notification.scss
@@ -4,6 +4,7 @@
 // "We style it because the built-in is suck"
 
 $notif-prefix: "notif";
+$theme-notif-enable: false !default;
 
 @if ($theme-notif-enable == true) {
 
