--- a/_sass/components/_tree.scss
+++ b/_sass/components/_tree.scss
@@ -4,6 +4,7 @@
 // "We style it because the built-in is suck"
 
 $tree-prefix: "tree" !default;
+$theme-tree-enable: false !default;
 
 @if ($theme-tree-enable == true) {
 
