--- a/_sass/themes/hyde/base/_border.scss
+++ b/_sass/themes/hyde/base/_border.scss
@@ -6,4 +6,4 @@ $theme-border-size: 1px;
 $theme-border-width: 1px;
 $theme-border-style: solid;
 $theme-border-radius: 3px;
-$theme-border-color: $gray;
+$theme-border-color: $timberwolf;
