--- a/_sass/themes/hyde/components/_quote.scss
+++ b/_sass/themes/hyde/components/_quote.scss
@@ -2,5 +2,11 @@
 // Quote - Default Theme
 // ==========================================
 
-$theme-quote-padding: 10px;
+$theme-quote-padding: map-get($theme-margin, small);
 $theme-quote-border-radius: 5px;
+
+// Quote
+$theme-color-quote: (
+    background: $peach,
+    foreground: $white
+);
