--- a/_sass/themes/hyde/components/_tag.scss
+++ b/_sass/themes/hyde/components/_tag.scss
@@ -4,4 +4,11 @@
 
 $theme-tag-padding: 2px 4px;
 $theme-tag-margin: 5px;
-$theme-tag-border-radius: 3px;
+$theme-tag-border-radius: $theme-border-radius;
+
+// Tag
+$theme-color-tag: (
+    background: $zomp,
+    foreground: $white,
+    hover: $dark-zomp
+);
