--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -1,156 +1,45 @@
-// =====================================================
-// Button
-// =====================================================
-// "We style it because the built-in is suck"
+// ===========================================
+// Button - Default Theme
+// ==========================================
 
-$button-prefix: "btn";
-$theme-button-enable: false !default;
-
-@if ($theme-button-enable == true) {
-
-.#{$button-prefix} {
-    @include button-padding(map-get($theme-font-size, medium));
-
-    display     : inline-block;
-    box-sizing  : border-box;
-
-    font-family : $theme-font-family;
-    font-size   : map-get($theme-font-size, medium);
-    font-weight : map-get($theme-font-weight, bold);
-    text-transform: $theme-button-text-transform;
-    text-decoration: none;
-
-    letter-spacing : $theme-letter-spacing;
-    word-spacing   : $theme-word-spacing;
-
-    margin  : $theme-button-margin;
-
-    position : relative;
-
-    &:hover {
-        cursor : pointer;
-    }
-
-    // -------------------------------------------
-    // Size Variants
-    // -------------------------------------------
-
-    &--small {
-        @include button-padding(map-get($theme-font-size, small));
-        font-size : map-get($theme-font-size, small);
-    }
-
-    &--large {
-        @include button-padding(map-get($theme-font-size, large));
-        font-size : map-get($theme-font-size, large);
-    }
-
-    &--x-large {
-        @include button-padding(map-get($theme-font-size, x-large));
-        font-size : map-get($theme-font-size, x-large);
-    }
-
-    &--block {
-        width: 100%;
-    }
-
-    &--icon {
-        padding: 0;
-    }
-}
+$theme-button-text-transform: capitalize;
+$theme-button-margin: 0;
 
 // -------------------------------------------
-// Grouped Button
+// Button Color
 // -------------------------------------------
 
-.#{$button-prefix}-group,
-.#{$button-prefix}-dropdown {
-    position: relative;
-    display: inline-block;
-}
+$theme-color-button-disabled: (
+    background: $gray,
+    foreground: $deep-gray
+);
 
-.#{$button-prefix}-group {
-    & .#{$button-prefix}:not(:first-child):not(:last-child) {
-        margin-left: -$theme-border-size;
-        margin-right: -$theme-border-size;
-        border-radius: 0;
-    }
+$theme-color-button-common-normal: (
+    background: $white,
+    foreground: $black
+);
 
-    & .#{$button-prefix}:first-child {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-    }
+$theme-color-button-common-hover: (
+    background: $bright-gray,
+    foreground: $black
+);
 
-    & .#{$button-prefix}:last-child {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-    }
-}
+$theme-color-button-cta-normal: (
+    background: $zomp,
+    foreground: $white
+);
 
-// -------------------------------------------
-// Color Variants
-// -------------------------------------------
+$theme-color-button-cta-hover: (
+    background: $dark-zomp,
+    foreground: $white
+);
 
-.#{$button-prefix}[disabled] {
-    @include border($theme-border-size,
-		            $theme-border-style,
-		            map-get($theme-color-button-disabled, foreground),
-		            $theme-border-radius);
+$theme-color-button-inverse-cta-normal: (
+    background: transparent,
+    foreground: $bright-green
+);
 
-    background : map-get($theme-color-button-disabled, background);
-    color      : map-get($theme-color-button-disabled, foreground);
-
-    &:hover {
-        cursor       : not-allowed;
-        background   : map-get($theme-color-button-disabled, background);
-        color        : map-get($theme-color-button-disabled, foreground);
-        border-color : map-get($theme-color-button-disabled, foreground);
-    }
-}
-
-.#{$button-prefix}--common {
-    @include border($theme-border-size,
-		            $theme-border-style,
-		            map-get($theme-color-button-disabled, foreground),
-		            $theme-border-radius);
-
-    background : map-get($theme-color-button-common-normal, background);
-    color      : map-get($theme-color-button-common-normal, foreground);
-
-    &:hover {
-        background : map-get($theme-color-button-common-hover, background);
-    }
-}
-
-.#{$button-prefix}--cta {
-    @include border($theme-border-size,
-		            $theme-border-style,
-		            map-get($theme-color-button-cta-normal, background),
-		            $theme-border-radius);
-
-    background : map-get($theme-color-button-cta-normal, background);
-    color      : map-get($theme-color-button-cta-normal, foreground);
-
-    &:hover {
-        background   : map-get($theme-color-button-cta-hover, background);
-        border-color : map-get($theme-color-button-cta-hover, background);
-    }
-}
-
-.#{$button-prefix}--i-cta {
-    @include border($theme-border-size,
-		            $theme-border-style,
-		            map-get($theme-color-button-inverse-cta-normal, foreground),
-		            $theme-border-radius);
-
-    background : map-get($theme-color-button-inverse-cta-normal, background);
-    color      : map-get($theme-color-button-inverse-cta-normal, foreground);
-
-    &:hover {
-        color        : map-get($theme-color-button-inverse-cta-hover, foreground);
-        background   : map-get($theme-color-button-inverse-cta-hover, background);
-        border-color : map-get($theme-color-button-inverse-cta-hover, foreground);
-    }
-}
-
-}
+$theme-color-button-inverse-cta-hover: (
+    background: transparent,
+    foreground: $green
+);
