--- a/_sass/components/_paginator.scss
+++ b/_sass/components/_paginator.scss
@@ -1,25 +1,5 @@
-// =====================================================
-// Paginator
-// =====================================================
-// "We style it because the built-in is suck"
+// ===========================================
+// Paginator - Default Theme
+// ==========================================
 
-$paginator-prefix: "paginator" !default;
-$theme-paginator-enable: false !default;
-
-@if ($theme-paginator-enable == true) {
-
-.#{$paginator-prefix} {
-    @include clearfix;
-    display: block;
-    margin: $theme-paginator-margin;
-
-    &__prev {
-        float: left;
-    }
-
-    &__next {
-        float: right;
-    }
-}
-
-}
+$theme-paginator-margin: map-get($theme-margin, medium) 0;
