--- a/_sass/components/_quote.scss
+++ b/_sass/components/_quote.scss
@@ -1,20 +1,12 @@
-// =====================================================
+// ===========================================
+// Quote - Default Theme
+// ==========================================
+
+$theme-quote-padding: map-get($theme-margin, small);
+$theme-quote-border-radius: 5px;
+
 // Quote
-// =====================================================
-// "We style it because the built-in is suck"
-
-$quote-prefix: "quote" !default;
-$theme-quote-enable: false !default;
-
-@if ($theme-quote-enable == true) {
-
-.#{$quote-prefix} {
-    display: block;
-    box-sizing: border-box;
-    padding: $theme-quote-padding;
-    border-radius: $theme-quote-border-radius;
-    background: map-get($theme-color-quote, background);
-    color: map-get($theme-color-quote, foreground);
-}
-
-}
+$theme-color-quote: (
+    background: $peach,
+    foreground: $white
+);
