--- a/_sass/components/_topbar.scss
+++ b/_sass/components/_topbar.scss
@@ -1,110 +1,21 @@
-// =====================================================
+// ===========================================
+// Topbar - Default Theme
+// ==========================================
+
+$theme-topbar-padding: map-get($theme-margin, small);
+$theme-topbar-padding-tablet: 0 map-get($theme-padding, medium);
+$theme-topbar-padding-mobile: map-get($theme-padding, x-small) map-get($theme-padding, medium);
+$theme-topbar-z-index: 1;
+$theme-topbar-title-line-height: 1.8;
+$theme-topbar-border-width: 1px;
+$theme-topbar-link-active-border-width: 3px;
+
 // Topbar
-// =====================================================
-// "We style it because the built-in is suck"
-
-$topbar-prefix: "topbar" !default;
-$theme-topbar-enable: false !default;
-
-@if ($theme-topbar-enable == true) {
-
-.#{$topbar-prefix} {
-    @include clearfix;
-    @include border(0 0 $theme-topbar-border-width,
-                    solid,
-                    map-get($theme-color-topbar, border));
-    box-sizing: border-box;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: $theme-topbar-z-index;
-    width: 100%;
-    background: map-get($theme-color-topbar, background);
-
-    // scss-lint:disable  NameFormat
-    @include gridle_state(tablet) {
-        padding: $theme-topbar-padding-tablet;
-    }
-
-    @include gridle_state(mobile) {
-        padding: $theme-topbar-padding-mobile; // TODO: set to be configurable
-    }
-    // scss-lint:enable NameFormat
-
-    &__title {
-        text-decoration: none;
-        font-size: map-get($theme-font-size, large);
-        line-height: $theme-topbar-title-line-height;
-        font-weight: map-get($theme-font-weight, super-bold);
-        color: map-get($theme-color-topbar, foreground);
-    }
-
-    &__menu-btn {
-        display: none;
-        float: right;
-
-        // scss-lint:disable  NameFormat
-        @include gridle_state(mobile) {
-            display: inline-block;
-        }
-        // scss-lint:enable NameFormat
-    }
-}
-
-.#{$topbar-prefix}-nav {
-    list-style: none;
-    margin: 0;
-    margin-bottom: -1 * $theme-topbar-border-width;
-    padding: 0;
-    text-align: right;
-
-    &__item {
-        display: inline-block;
-    }
-
-    &__link {
-        box-sizing: border-box;
-        text-align: left;
-        font-size: map-get($theme-font-size, medium);
-        line-height: map-get($theme-font-size, medium);
-        font-weight: map-get($theme-font-weight, bold);
-        color: map-get($theme-color-topbar, link-default);
-        text-decoration: none;
-        padding: $theme-topbar-padding;
-        display: inline-block;
-
-        &.active {
-            @include border(0 0 $theme-topbar-link-active-border-width,
-                            solid,
-                            map-get($theme-color-topbar, foreground));
-            color: map-get($theme-color-topbar, link-active);
-        }
-
-        &.active:hover {
-            color: map-get($theme-color-topbar, link-active);
-        }
-
-        &:hover {
-            cursor: pointer;
-            color: map-get($theme-color-topbar, link-hover);
-        }
-    }
-}
-
-.#{$topbar-prefix}-nav--full {
-    display: none;
-
-    .#{$topbar-prefix}-nav__item {
-        display: block;
-    }
-
-    .#{$topbar-prefix}-nav__link {
-        display: block;
-    }
-
-    &.is-active {
-        display: block;
-    }
-}
-
-}
+$theme-color-topbar: (
+    background: $white,
+    foreground: $zomp,
+    link-default: $laurel-green,
+    link-hover: $deep-laurel-green,
+    link-active: $zomp,
+    border: $timberwolf
+);
